force-app/main/default/objects/KimbleOne__PurchaseOrderAllocationItem__c/KimbleOne__PurchaseOrderAllocationItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Purchase Order Allocation Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Purchase Order Allocation Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Allocation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>