force-app/main/default/objects/KimbleOne__PurchaseOrderAllocationItem__c/fields/KimbleOne__AllocationCap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocationCap__c</fullName>
    <label>Allocation Cap</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>