force-app/main/default/objects/KimbleOne__PurchaseOrderAllocationItem__c/fields/KimbleOne__InvoicedValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicedValue__c</fullName>
    <label>InvoicedValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>