force-app/main/default/objects/KimbleOne__PurchaseOrderAllocationItem__c/fields/KimbleOne__PurchaseOrderAllocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrderAllocation__c</fullName>
    <label>Allocated Purchase Order</label>
    <referenceTo>KimbleOne__PurchaseOrderAllocation__c</referenceTo>
    <relationshipLabel>Purchase Order Allocation Items</relationshipLabel>
    <relationshipName>PurchaseOrderAllocationItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>