force-app/main/default/objects/KimbleOne__PurchaseOrderAllocationItem__c/fields/KimbleOne__PurchaseOrderAllocationType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrderAllocationType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PurchaseOrderAllocationType</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>PurchaseOrderAllocationType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Purchase Order Allocation Items</relationshipLabel>
    <relationshipName>PurchaseOrderAllocationItems</relationshipName>
    <type>Lookup</type>
</CustomField>