force-app/main/default/objects/KimbleOne__PurchaseOrderAllocationItem__c/validationRules/KimbleOne__AmountGTEZero.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__AmountGTEZero</fullName>
    <active>false</active>
    <description>Amount is greater than or equal to zero</description>
    <errorConditionFormula>KimbleOne__AllocationCap__c &lt;  0</errorConditionFormula>
    <errorMessage>Amount must be greater than or equal to zero</errorMessage>
</ValidationRule>