force-app/main/default/objects/KimbleOne__PurchaseOrderAllocationItem__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__PurchaseOrderAllocation__c</columns>
    <columns>KimbleOne__AllocationCap__c</columns>
    <columns>KimbleOne__InvoicedValue__c</columns>
    <columns>KimbleOne__PurchaseOrderAllocationType__c</columns>
    <columns>KimbleOne__RemainingValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>